<resources>
    <string name="mc_ad_notification_downloading">正在下载</string>
    <string name="mc_ad_notification_continue">继续下载</string>
    <string name="mc_ad_notification_failed">下载失败</string>
    <string name="mc_ad_notification_succ">下载成功</string>
    <string name="mc_ad_warn_sd_not_exist">SD卡不存在</string>
    <string name="mc_ad_logo_text">推广</string>
    <string name="mc_ad_search_item_down">下载</string>
    <string name="mc_ad_search_item_tell">电话</string>
    <string name="mc_game_center_topbar_title">游戏中心</string>
    <string name="mc_game_center_into_game">进入游戏</string>
    <string name="mc_game_center_game_message">内容简介</string>
    <string name="mc_game_detail_topbar_title">游戏详情</string>
    <string name="mc_forum_cache_load_more">"上次加载时间：{0}
下拉刷新查看更多"</string>
    <string name="mc_game_detail_desc">游戏介绍</string>
    <string name="mc_game_detail_coment">评论</string>
    <string name="mc_game_datail_share">分享</string>
    <string name="mc_game_detail_into_game">进入游戏</string>
    <string name="mc_game_detail_comment_submit">提交</string>
    <string name="mc_game_detail_comment_cancel">取消</string>
    <string name="mc_game_detail_comment_succ">评论成功</string>
    <string name="mc_game_detail_comment_fail">评论失败</string>
    <string name="mc_game_detail_comment_empty">请输入评论内容</string>
    <string name="mc_game_detail_login_prompt">请先登录</string>
    <string name="mc_game_detail_comment_date">评论时间</string>
    <string name="mc_game_center_delete_game">删除该游戏</string>
    <string name="mc_forum_down_load_game">下载游戏</string>
    <string name="mc_game_no_down_load_url">暂时无法下载</string>
    <string name="mc_game_player_num_pre">有</string>
    <string name="mc_game_player_num_suffix">个好友在玩</string>
    <string name="mc_game_url_available">链接不可用</string>
    <string name="mc_game_comment_get_data_fail">获取数据失败</string>
    <string name="mc_forum_connection_fail">网络连接失败！</string>
    <string name="mc_forum_uplode_imgae_fail">图片上传失败！</string>
    <string name="mc_forum_down_imgae_fail">图片加载失败！</string>
    <string name="mc_forum_other_error">未知错误！</string>
    <string name="mc_forum_json_error">数据解析异常</string>
    <string name="mc_forum_no_permission_tag">对不起，您没有操作权限！</string>
    <string name="mc_forum_no_permission">对不起，您没有操作权限！</string>
    <string name="mc_forum_token_invalid">用户验证失败</string>
    <string name="mc_forum_user_not_exist">用户不存在</string>
    <string name="mc_forum_new_user_not_exist">新用户不存在</string>
    <string name="mc_forum_user_pwd_error">用户密码错误</string>
    <string name="mc_forum_user_nick_repeat">用户昵称重复</string>
    <string name="mc_forum_email_exist">邮箱地址已注册！</string>
    <string name="mc_forum_repeat_favorit">已关注</string>
    <string name="mc_forum_add_favorit_succ">收藏成功</string>
    <string name="mc_forum_cancel_favorit_succ">取消收藏</string>
    <string name="mc_forum_key_invalid">社区key无效</string>
    <string name="mc_forum_unknow_error">未知错误</string>
    <string name="mc_forum_pwd_no_same">原密码不正确，请重新输入！</string>
    <string name="mc_forum_sdk_type_version_too_low">论坛SDK版本过低</string>
    <string name="mc_forum_subject_no_exist">主题不存在</string>
    <string name="mc_forum_delete_topic_fail">删除主题失败</string>
    <string name="mc_forum_delete_reply_fail">删除回帖失败</string>
    <string name="mc_forum_update_topic_fail">修改主题失败</string>
    <string name="mc_forum_update_reply_fail">修改回帖失败</string>
    <string name="mc_forum_no_keywords">搜索关键字为空</string>
    <string name="mc_forum_error_black_user_send_msg">用户被禁言发送消息失败</string>
    <string name="mc_forum_error_is_black_of_manager">您的帐号因为不恰当行为被封禁</string>
    <string name="mc_forum_error_maintain">系统正在维护</string>
    <string name="mc_forum_error_publish_sensitive_word">所发表的言论包含敏感词</string>
    <string name="mc_forum_error_longitude_and_latitude">经纬度参数错误</string>
    <string name="mc_forum_error_remote_server">远程服务器错误</string>
    <string name="mc_forum_error_requeset_parameter">参数错误</string>
    <string name="mc_forum_error_operation_failure">操作失败</string>
    <string name="mc_forum_error_gain_picture_fail">获取图片地址失败</string>
    <string name="mc_plaza_search_base_request_url">http://sdk.mobcent.com/baikesdk/</string>
    <string name="mc_game_request_url">http://sdk.mobcent.com/forum/</string>
    <string name="mc_place_poi_request_url">http://api.map.baidu.com/place/v2/search</string>
    <string name="mc_weather_request_base_url">http://sdk.mobcent.com/baikesdk/</string>
    <string name="mc_forum_add_to_sys_gallery_succ">成功添加到系统相册！</string>
    <string name="mc_forum_downloading">正在下载请稍后</string>
    <string name="mc_forum_add_to_sys_gallery_fail">添加到系统相册失败！</string>
    <string name="mc_forum_error_permission_download">您无权限！</string>
    <string name="mc_lowest_request_location">请求获取您的地理位置</string>
    <string name="mc_lowest_request_location_accept">允许</string>
    <string name="mc_lowest_request_location_refuse">拒绝</string>
    <string name="mc_place_home_around_text">周边生活</string>
    <string name="mc_place_home_route_text">路线规划</string>
    <string name="mc_place_around_more">更多</string>
    <string name="mc_place_top_map_text">地图</string>
    <string name="mc_place_hotel">宾馆</string>
    <string name="mc_place_cater">餐饮</string>
    <string name="mc_place_life">生活娱乐</string>
    <string name="mc_place_no_telephone">暂无电话</string>
    <string name="mc_place_every_consumption">人均消费：</string>
    <string name="mc_place_rmb_icon">￥</string>
    <string name="mc_place_above">起</string>
    <string name="mc_place_reference_price">参考价：</string>
    <string name="mc_place_around_all">全部</string>
    <string name="mc_place_around_range">范围</string>
    <string name="mc_place_around_default">默认</string>
    <string name="mc_place_around_category">类别</string>
    <string name="mc_place_around_sort">排序</string>
    <string name="mc_place_around_item_arrive">到这去</string>
    <string name="mc_place_around_item_tel">电话</string>
    <string name="mc_place_around_next_page">下一页</string>
    <string name="mc_place_around_up_page">下拉上一页</string>
    <string name="mc_place_around_release_up_page">松开上一页</string>
    <string name="mc_place_key_disable">请在 DemoApplication.java文件输入正确的授权Key,并检查您的网络连接是否正常！</string>
    <string name="mc_place_key_able">key认证成功</string>
    <string name="mc_place_bad_net">您的网络出错啦！</string>
    <string name="mc_place_bad_search_keywords">输入正确的检索条件！</string>
    <string name="mc_place_no_category">暂无类别</string>
    <string name="mc_place_no_sort">暂无排序</string>
    <string name="mc_place_no_distance">暂无范围</string>
    <string name="mc_place_get_location_error">获取位置信息失败</string>
    <string name="mc_place_hotwords_search_base_text">在{0}附近搜索</string>
    <string name="mc_traffic_by_walk">步行</string>
    <string name="mc_traffic_by_bus">公交</string>
    <string name="mc_traffic_by_car">驾车</string>
    <string name="mc_traffic_feel_faster">较快捷</string>
    <string name="mc_traffic_feel_transfer">少换乘</string>
    <string name="mc_traffic_feel_walk">少步行</string>
    <string name="mc_traffic_route_my_location">我的位置</string>
    <string name="mc_traffic_route_least">最少时间</string>
    <string name="mc_traffic_route_unimpeded">避开拥堵</string>
    <string name="mc_traffic_route_short_road">最短路程</string>
    <string name="mc_traffic_route_general_road">不走高速</string>
    <string name="mc_traffic_route_search_location">搜索</string>
    <string name="mc_route_bus_detail_topbar_tital">详情</string>
    <string name="mc_traffic_route_search_no_start_location">请输入起始地点</string>
    <string name="mc_traffic_route_search_no_end_location">请输入目的地</string>
    <string name="mc_traffic_route_arrive">达到</string>
    <string name="mc_traffic_route_about_time">约</string>
    <string name="mc_traffic_route_about_hour">小时</string>
    <string name="mc_traffic_route_minute">分钟</string>
    <string name="mc_traffic_route_distance_km">公里</string>
    <string name="mc_place_route_nav_drive_solution">驾车方案</string>
    <string name="mc_place_route_nav_bus_solution">公交方案</string>
    <string name="mc_place_route_nav_walk_solution">步行方案</string>
    <string name="mc_place_route_nav_around">周边</string>
    <string name="mc_place_route_map_nav">导航</string>
    <string name="mc_place_route_arrive">到达</string>
    <string name="mc_bd_map_zoom_maximum">已经放大到最大级别了</string>
    <string name="mc_bd_map_zoom_minimum">已经缩小到最小级别了</string>
    <string name="mc_place_route_sug_dialog_start">您要找的起点是：</string>
    <string name="mc_place_route_sug_dialog_end">您要找的终点是：</string>
    <string name="mc_place_route_sug_dialog_no_start">未找到该起点</string>
    <string name="mc_place_route_sug_dialog_no_end">未找到该终点</string>
    <string name="mc_place_route_input_start_location">输入起点...</string>
    <string name="mc_place_route_input_dis_location">输入终点...</string>
    <string name="mc_place_route_screet_shot">正在截取当前地图图片...</string>
    <string name="mc_place_route_screet_shot_suc">截取完成，保存在系统相册</string>
    <string name="mc_place_route_can_not_find_result">抱歉，未找到结果</string>
    <string name="mc_place_map">地图</string>
    <string name="mc_place_baidu_map_setup_msg">您尚未安装百度地图app或app版本过低，点击确认安装或者打开浏览器网页导航</string>
    <string name="mc_place_baidu_map_prompt">提示</string>
    <string name="mc_place_baidu_map_confirm">确认</string>
    <string name="mc_place_baidu_map_web_nav">网页导航</string>
    <string name="mc_place_baidu_map_share">分享</string>
    <string name="mc_place_route_tel">电话</string>
    <string name="mc_place_route_go">到这去</string>
    <string name="mc_place_route_searche_around">搜周边</string>
    <string name="mc_place_route_avg_expense">人均：</string>
    <string name="mc_place_route_plan">路线规划</string>
    <string name="mc_place_rmb_unit">元</string>
    <string name="mc_place_today">今天</string>
    <string name="mc_place_go">出发</string>
    <string name="mc_place_loading">数据加载中...</string>
    <string name="mc_plaza_top_personal">个人主页</string>
    <string name="mc_plaza_top_set">设置</string>
    <string name="mc_plaza_top_about">关于</string>
    <string name="mc_plaza_top_title">广场</string>
    <string name="mc_plaza_search_title">搜索</string>
    <string name="mc_plaza_search_search_head_text">搜</string>
    <string name="mc_plaza_search_keyword">搜索关键字</string>
    <string name="mc_plaza_search_category_title">搜索类别</string>
    <string name="mc_plaza_search_category">类别</string>
    <string name="mc_plaza_search_btn_web">搜网页</string>
    <string name="mc_plaza_title">广场</string>
    <string name="mc_plaza_loading">加载中...</string>
    <string name="mc_plaza_no_data">抱歉，没有找到相关内容</string>
    <string name="mc_forum_logout">注销用户</string>
    <string name="mc_forum_photo_finish">完成</string>
    <string name="mc_forum_photo_num_zero">0</string>
    <string name="mc_forum_photo_curr_num">{0}/{1}</string>
    <string name="mc_forum_mention_friend_reply_notification_flag">\@提示通知</string>
    <string name="mc_forum_message_voice_flag">提示音</string>
    <string name="mc_forum_colse_location_flag">定位服务</string>
    <string name="mc_forum_hide_location_flag">位置信息</string>
    <string name="mc_forum_pic_hide_location_desc">关闭后, 您则不会出现在周边用户和周边帖子</string>
    <string name="mc_forum_pic_mode_flag">无图模式</string>
    <string name="mc_forum_pic_mode_desc">在非WIFI环境下生效</string>
    <string name="mc_forum_clear_cache">清理缓存</string>
    <string name="mc_forum_recom_app">推荐应用</string>
    <string name="mc_forum_user_reply_notification_flag">回复提示通知</string>
    <string name="mc_forum_update">版本检测</string>
    <string name="mc_forum_password_setting">修改密码</string>
    <string name="mc_forum_save">保存</string>
    <string name="mc_forum_about">软件说明</string>
    <string name="mc_forum_old_password">原密码</string>
    <string name="mc_forum_new_password">新密码</string>
    <string name="mc_forum_input_old_password">请输入原密码</string>
    <string name="mc_forum_input_new_password">请输入新密码</string>
    <string name="mc_forum_password_tip">注意：密码长度控制在6–20个字符</string>
    <string name="mc_forum_platform_change_password_warn">使用新浪微博、QQ、人人等帐号登陆的用户，暂时不可修改密码</string>
</resources>