<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mc_forum_all_bg1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="@dimen/mc_forum_box1_margin_top">

        <ScrollView
            android:id="@id/mc_forum_pwd_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mc_forum_margin_left_right"
            android:layout_marginRight="@dimen/mc_forum_margin_left_right"
            android:paddingTop="@dimen/mc_forum_layout_height"
            android:scrollbars="none">

            <LinearLayout
                android:id="@id/mc_forum_password_setting_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@id/mc_forum_old_password_text"
                    style="@style/mc_forum_pwd_lable"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/mc_forum_old_password" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:gravity="right">

                    <EditText
                        android:id="@id/mc_forum_old_password_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/mc_forum_password_edit_height"
                        android:layout_marginTop="2.0dip"
                        android:background="@drawable/mc_forum_login_frame"
                        android:hint="@string/mc_forum_input_old_password"
                        android:inputType="textPassword"
                        android:padding="5.0dip"
                        android:singleLine="true"
                        android:textColor="@color/mc_forum_input_normal_text_color"
                        android:textColorHint="@color/mc_forum_input_hint_text_color"
                        android:textSize="@dimen/mc_forum_text_size_16" />

                    <ImageButton
                        android:id="@id/mc_forum_old_password_imgBtn"
                        android:layout_width="33.0dip"
                        android:layout_height="20.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="3.0dip"
                        android:background="@drawable/mc_forum_password_invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@id/mc_forum_new_password_text"
                    style="@style/mc_forum_pwd_lable"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:gravity="left"
                    android:text="@string/mc_forum_new_password" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:gravity="right">

                    <EditText
                        android:id="@id/mc_forum_new_password_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/mc_forum_password_edit_height"
                        android:layout_marginTop="2.0dip"
                        android:background="@drawable/mc_forum_login_frame"
                        android:hint="@string/mc_forum_input_new_password"
                        android:inputType="textPassword"
                        android:padding="5.0dip"
                        android:singleLine="true"
                        android:textColor="@color/mc_forum_input_normal_text_color"
                        android:textColorHint="@color/mc_forum_input_hint_text_color"
                        android:textSize="@dimen/mc_forum_text_size_16" />

                    <ImageButton
                        android:id="@id/mc_forum_new_password_imgBtn"
                        android:layout_width="33.0dip"
                        android:layout_height="20.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="3.0dip"
                        android:background="@drawable/mc_forum_password_invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@id/mc_forum_password_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20.0dip"
                    android:text="@string/mc_forum_password_tip"
                    android:textColor="@color/mc_forum_text_normal_color"
                    android:textSize="@dimen/mc_forum_text_size_12"
                    android:visibility="gone" />

                <Button
                    android:id="@id/mc_forum_save_btn"
                    android:layout_width="60.0dip"
                    android:layout_height="30.0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40.0dip"
                    android:background="@drawable/mc_forum_personal_set_icon1"
                    android:text="@string/mc_forum_save"
                    android:textColor="@color/mc_forum_text1_normal_color" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mc_forum_pwd_scroll"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@id/mc_forum_pwd_scroll"
            android:layout_marginBottom="100.0dip"
            android:text="@string/mc_forum_platform_change_password_warn"
            android:textColor="@color/mc_forum_text_normal_color"
            android:textSize="@dimen/mc_forum_text_size_12" />
    </RelativeLayout>
</RelativeLayout>