<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_bar_box" android:layout_width="fill_parent" style="@style/mc_forum_top_bar_bg">
        <Button android:id="@id/back_btn" android:background="@drawable/mc_forum_top_bar_button1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/mc_forum_top_bar_button" />
        <TextView android:id="@id/photo_curr_num_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/mc_forum_photo_curr_num" android:layout_toRightOf="@id/back_btn" android:layout_centerVertical="true" style="@style/mc_forum_info_topbar_title" />
    </RelativeLayout>
    <com.mobcent.lowest.android.ui.widget.scaleview.ScaleViewPager android:id="@id/photo_viewpager" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/photo_select_box" android:layout_below="@id/top_bar_box" />
    <RelativeLayout android:id="@id/photo_select_box" android:background="@drawable/mc_forum_camera_bottom_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true">
        <Button android:id="@id/photo_select_btn" android:background="@drawable/mc_forum_camera_icon6_n" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/mc_forum_text_size_10" android:textColor="@color/mc_forum_text1_normal_color" android:gravity="center" android:id="@id/photo_num_text" android:background="@drawable/mc_forum_camera_number_bg" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginRight="5.0dip" android:text="@string/mc_forum_photo_num_zero" android:layout_toLeftOf="@id/photo_finish_text" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/mc_forum_text_size_16" android:textColor="@color/mc_forum_text1_normal_color" android:id="@id/photo_finish_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/mc_forum_photo_finish" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>